# TSA-Video-Game

./: CMakeLists.txt  CMakePresets.json  VideoGame.data  VideoGame.html  VideoGame.js  VideoGame.wasm  compile.bat
Level/: House3.tiled-session  Level1.json  Level1.tiled-session  Level1.tmx  MAp 1.tmx  WallTiles.json  WallTiles.tsx  WallTiles2.tsx  WallTilesComplete.tsx
audio/: Music.wav.m4a
gui/: amber.h  gui_start_menu.h
include/: game.h  jethro.h  main.h  sprite.h  tileset.h  timer.h
level/: Level1.tmx  Level2.json  Level2.tiled-session  Level2TileSet.tsx  Level2Tiles.tsx
src/: game.cpp  jethro.cpp  main.cpp  sprite.cpp  timer.cpp
